# design/admin.go
@@ -5,8 +5,9 @@ import (
 	"github.com/goadesign/goa/design/apidsl"
 )
 
-var _ = apidsl.Resource("regevent", func() {
-	apidsl.BasePath("/admin/event")
+var _ = apidsl.Resource("listen", func() {
+	apidsl.BasePath("/admin/listen")
+	apidsl.Response(design.InternalServerError, ErrMedia)
 	apidsl.Action("add", func() {
 		apidsl.Description("注册事件监听")
 		apidsl.Routing(apidsl.POST(""))
@@ -14,7 +15,7 @@ var _ = apidsl.Resource("regevent", func() {
 		apidsl.Payload(func() {
 			apidsl.Member("etype", design.String, "事件类型")
 			apidsl.Member("action", design.String, "事件行为,不设置该项则注册监听所有行为变化")
-			apidsl.Member("from", design.String, "产生事件的服务器标识")
+			apidsl.Member("from", design.String, "注册事件监听的服务器标识")
 			apidsl.Member("hookurl", design.String, "钩子url")
 			apidsl.Required("etype")
 			apidsl.Required("hookurl")
@@ -69,6 +70,7 @@ var _ = apidsl.Resource("regevent", func() {
 var _ = apidsl.Resource("analysis", func() { // 事件分析
 	apidsl.BasePath("/admin/event/analysis") // 基础URL
 
+	apidsl.Response(design.InternalServerError, ErrMedia)
 	apidsl.Action("list", func() {
 		apidsl.Description("事件发生历史")
 		apidsl.Routing(apidsl.GET(""))
