# design/event.go
@@ -5,19 +5,10 @@ import (
 	"github.com/goadesign/goa/design/apidsl"
 )
 
-var _ = apidsl.API("antevent", func() { // API defines the microservice endpoint and
-	apidsl.Title("蚁动事件引擎")           // other global properties. There should be one
-	apidsl.Description("这是一个事件服务引擎") // and exactly one API definition appearing in
-	apidsl.Scheme("http")            // the design.
-	apidsl.Host("localhost:8080")
-	apidsl.Consumes("application/json") // Media types supported by the API
-	apidsl.Produces("application/json") // Media types generated by the API
-	apidsl.BasePath("/v1")
-})
-
 var _ = apidsl.Resource("event", func() { // Resources group related API endpoints
 	apidsl.BasePath("/event") // together. They map to REST resources for REST
 
+	apidsl.Response(design.InternalServerError, ErrMedia)
 	apidsl.Action("put", func() { // Actions define a single API endpoint together
 		apidsl.Description("创建一个事件")        // with its path, parameters (both path
 		apidsl.Routing(apidsl.PUT("/:eid")) // parameters and querystring values) and payload
@@ -38,11 +29,11 @@ var _ = apidsl.Resource("event", func() { // Resources group related API endpoin
 
 		})
 		apidsl.Response(design.OK, CreResultMedia)
-		apidsl.Response(design.NotFound)
 	})
 	apidsl.Action("post", func() { // Actions define a single API endpoint together
 		apidsl.Description("创建一个事件") // with its path, parameters (both path
 
+		apidsl.Response(design.InternalServerError, ErrMedia)
 		apidsl.Routing(apidsl.POST("", func() {
 
 		})) // parameters and querystring values) and payload
