# design/swagger.go
@@ -6,5 +6,11 @@ var _ = apidsl.Resource("swagger", func() {
 	apidsl.Origin("*", func() {
 		apidsl.Methods("GET", "OPTIONS")
 	})
-	apidsl.Files("/swagger.json", "public/swagger/swagger.json")
+	apidsl.Files("/swagger.json", "swagger/swagger.json")
+})
+var _ = apidsl.Resource("public", func() {
+	apidsl.Origin("*", func() {
+		apidsl.Methods("GET", "OPTIONS")
+	})
+	apidsl.Files("/ui/*filepath", "dist")
 })
